--- a/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
@@ -144,16 +144,16 @@
     <string name="mark_agent_time_setting">Se blochează numerele ce au fost raportate ca Agenţii de un anumit număr de ori</string>
     <string name="mark_courier">Blocare numere raportate drept curieri</string>
     <string name="mark_courier_block">Raportat drept Curier</string>
-    <string name="mark_courier_block_large">Curier</string>
-    <string name="mark_courier_time_setting">Se blochează numerele ce au fost raportate drept Curier de un anumit număr de ori</string>
+    <string name="mark_courier_block_large">Curieri</string>
+    <string name="mark_courier_time_setting">Se blochează numerele ce au fost raportate drept Curieri de un anumit număr de ori</string>
     <string name="mark_fraud">Blocare numere raportate ca Escrocherii</string>
     <string name="mark_fraud_block">Raportat ca Escrocherie</string>
     <string name="mark_fraud_block_large">Escrocherii</string>
     <string name="mark_fraud_time_setting">Se blochează numerele ce au fost raportate ca Escrocherii de un anumit număr de ori</string>
     <string name="mark_harass">Blocare numere raportate ca Daune</string>
     <string name="mark_harass_block">Raportat ca Daună</string>
-    <string name="mark_harass_block_large">Daune</string>
-    <string name="mark_harass_time_setting">Se blochează numerele ce au fost raportate ca Daune de un anumit număr de ori</string>
+    <string name="mark_harass_block_large">Cicălitor</string>
+    <string name="mark_harass_time_setting">Se blochează numerele ce au fost raportate ca Cicălitori de un anumit număr de ori</string>
     <string name="mark_number_agent">Agent</string>
     <string name="mark_number_courier">Curier</string>
     <string name="mark_number_fraud">Fraudă</string>
