--- a/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
+++ b/Romanian/main/FileExplorer.apk/res/values-ro/strings.xml
@@ -4,7 +4,7 @@
     <string name="account_login_title">Cont</string>
     <string name="action_mode_deselect_all">Deselectaţi tot</string>
     <string name="action_mode_select_all">Selectaţi tot</string>
-    <string name="activity_parse_video_title">Lipiți URL-ul</string>
+    <string name="activity_parse_video_title">Lipiți link-ul videoclipului</string>
     <string name="activity_rule">Reguli</string>
     <string name="ad_download">Descărcare</string>
     <string name="ad_downloading">Încărcare…</string>
@@ -169,6 +169,8 @@
     <string name="directory_no_item">Gol</string>
     <string name="disk_available">Disponibil: </string>
     <string name="disk_total">Total: </string>
+    <string name="dislike_toast">"Asemenea videoclipuri nu vă vor fi recomandate."</string>
+    <string name="dislike_video">"Nu mă interesează"</string>
     <string name="dlg_error_unmount_text">"Demontarea stocării USB a eşuat"</string>
     <string name="download_current_progress">%1$d%%</string>
     <string name="download_failed">Nu s-a putut descărca</string>
@@ -289,6 +291,9 @@ Serverul nostru este deconectat pentru lucrări de întreținere în acest momen
 Ne cerem scuze pentru acest lucru!"</string>
     <string name="kuaipan_root_fooder">Acasă</string>
     <string name="kuaipan_tech_support">Autentificați-vă pe kuaipan.cn</string>
+    <string name="like_toast_1">Asemenea videoclipuri vă vor fi recomandate mai des.</string>
+    <string name="like_toast_2">Vizualizați videoclipurile pe care le-ați apreciat.</string>
+    <string name="like_toast_3">Conectați-vă pentru a vizualiza videoclipurile pe care le-ați apreciat.</string>
     <string name="load_err">Eroare încărcare</string>
     <string name="load_more">Vizualizaţi mai multe</string>
     <string name="load_sticker_fail">"Nu s-a putut încărca stickerul"</string>
@@ -522,7 +527,11 @@ Descărcați-le oricând doriți
     <string name="operation_unfavorite">Eliminaţi din favorite</string>
     <string name="operation_unlike">Eliminați din Favorite</string>
     <string name="origin_name">%1$s: </string>
-    <string name="other_user_liked_topic_tip">"Nu urmăriți niciun subiect în prezent"</string>
+    <string name="other_user_follow_title">Persoanele pe care le-am urmărit</string>
+    <string name="other_user_liked_topic_tip">Niciun subiect</string>
+    <string name="other_user_liked_video_title">Videoclipurile pe care le-am apreciat</string>
+    <string name="other_user_no_follow_tip">"Nu ați urmărit pe nimeni până acum."</string>
+    <string name="other_user_no_liked_video_tip">Niciun videoclip apreciat.</string>
     <string name="other_user_topic_tab">Subiecte</string>
     <string name="other_user_video_tab">Videoclipuri</string>
     <string name="pan_settting">Setări KuaiPan</string>
@@ -579,6 +588,8 @@ Descărcați-le oricând doriți
     <string name="quota_info">Mi Drive: %1$s disponibil, %2$s în total</string>
     <string name="qzone_platform">Qzone</string>
     <string name="recommend">Recomandat</string>
+    <string name="recommend_topic">Subiecte recomandate</string>
+    <string name="recommend_user">Profiluri recomandate</string>
     <string name="release_to_signin">Eliberaţi pentru a vă conecta</string>
     <string name="remote_video_no_network">"Nu s-a putut conecta la rețea. Verificați conexiunea și reîncercați."</string>
     <string name="remote_video_report_success">"Mulțumim pentru comentarii! Le vom analiza cu atenție."</string>
@@ -661,6 +672,7 @@ Descărcați-le oricând doriți
     <string name="server_control_charset">Codare transfer</string>
     <string name="server_control_settings">Setări</string>
     <string name="server_error">Eroare de server, încercați mai târziu. (Eroare %s)</string>
+    <string name="setting">Setări</string>
     <string name="share_box">Partajate</string>
     <string name="share_box_receive">Recepţionate</string>
     <string name="share_box_send">Trimise</string>
@@ -713,14 +725,16 @@ Descărcați-le oricând doriți
     <string name="tab_category">Categorii</string>
     <string name="tab_common_app">Aplicații și dosare</string>
     <string name="tab_expand">Extindeţi</string>
+    <string name="tab_follow">Urmărire</string>
     <string name="tab_hottest_video">Populare</string>
     <string name="tab_local">LOCAL</string>
     <string name="tab_local_video">Off-line</string>
     <string name="tab_more">Mai multe</string>
+    <string name="tab_newest_video">Noutăți</string>
     <string name="tab_path">DOSARE</string>
     <string name="tab_profile">Profil</string>
-    <string name="tab_ranking_list">Evaluare</string>
-    <string name="tab_remote_video">Recente</string>
+    <string name="tab_ranking_list">Lista de evaluări</string>
+    <string name="tab_recommend_video">Recomandate</string>
     <string name="tab_source">APLICAŢII</string>
     <string name="tab_storage">STOCARE</string>
     <string name="tag_weixin_video">Clipuri video</string>
@@ -759,10 +773,10 @@ Descărcați-le oricând doriți
     <string name="ui_main_toast_operation_failed">Nu s-a putut elimina din favorite %1$s</string>
     <string name="unmount_inform_text">Demontaţi stocarea USB?</string>
     <string name="unreviewed_video_cannot_share">Videoclipurile trebuie revizuite înainte de a fi partajate</string>
-    <string name="upload_external_action_hint">Lipiți URL-ul</string>
+    <string name="upload_external_action_hint">Lipiți link-ul videoclipului</string>
     <string name="upload_external_notification_failed">"Nu s-a putut posta"</string>
     <string name="upload_external_notification_success">Postat cu succes</string>
-    <string name="upload_external_notification_title">Se postează, așteptați un moment</string>
+    <string name="upload_external_notification_title">Se postează...</string>
     <string name="upload_failed">"Nu s-a putut încărca"</string>
     <string name="upload_file_toolarge_message">%1$d este prea mare; nu pot fi încărcate fișiere mai mari de 300 MB</string>
     <string name="upload_local_video">Partajați clipul video</string>
@@ -778,7 +792,7 @@ Descărcați-le oricând doriți
     <string name="upload_video_dialog_message">"Videoclipul dvs. va fi afișat printre videoclipurile populare după ce va fi verificat."</string>
     <string name="upload_video_dialog_title">Videoclip partajat cu succes</string>
     <string name="upload_video_failed">"Nu s-a putut partaja videoclipul; reîncercați."</string>
-    <string name="upload_video_forbidden">"Nu încărca videoclipurile similare"</string>
+    <string name="upload_video_forbidden">Nu încărcați același videoclip</string>
     <string name="upload_video_success">Videoclipul este verificat…</string>
     <string name="upload_video_tip">Se poate partaja un singur videoclip odată</string>
     <string name="uploading">Încărcare…</string>
@@ -786,8 +800,9 @@ Descărcați-le oricând doriți
     <string name="usb_label">USB</string>
     <string name="used">Utilizat</string>
     <string name="user_agreement">Acordul utilizatorului</string>
-    <string name="user_center_setting">Setări</string>
     <string name="user_center_title">Acasă</string>
+    <string name="user_follow_me_title">Urmăritorii mei</string>
+    <string name="user_follow_title">Persoanele pe care le urmăresc</string>
     <string name="user_guide">Aflați mai multe despre KuaiPan</string>
     <string name="user_guide_continue_use">OK</string>
     <string name="user_guide_download_other_version">Descărcaţi KuaiPan pentru Windows sau OSX</string>
@@ -797,23 +812,36 @@ Descărcați-le oricând doriți
     <string name="user_guide_save_file">Salvați fișierele utilizând KuaiPan</string>
     <string name="user_guide_summary">Stocare în cloud securizată și ușor de utilizat</string>
     <string name="user_guide_upload_to_kuaipan">Stocaţi elemente în Kuaipan de pe dispozitivul dvs.</string>
+    <string name="user_like_text">Îi place</string>
+    <string name="user_liked_video_title">Videoclipurile la care am dat like</string>
     <string name="user_login_dialog_cancle">Renunțare</string>
     <string name="user_login_dialog_tip">Conectați-vă pentru a încărca videoclipuri, pentru a participa la evaluări și pentru a putea câștiga premii</string>
     <string name="user_login_dialog_title">Conectați-vă</string>
+    <string name="user_message_text">Mesaje</string>
     <string name="user_msg_text">Mesaje</string>
+    <string name="user_no_fans_tip">Niciun urmăritor</string>
+    <string name="user_no_follow_topic">"Nu ați urmărit niciun subiect încă."</string>
+    <string name="user_no_follow_user">"Nu ați urmărit pe nimeni până acum."</string>
+    <string name="user_no_liked_video_tip">Videoclipurile pe care le-ați apreciat vor apărea aici.</string>
     <string name="user_no_net_video_tip">Conexiunea la rețea este slabă; verificați setările și încercați din nou</string>
     <string name="user_no_upload">Niciun videoclip</string>
     <string name="user_no_video_tip">"Nu ați încărcat niciun videoclip până acum"</string>
     <string name="user_not_login">Autentificați-vă întâi</string>
     <string name="user_not_video_btn_text">Încărcați primul dvs. videoclip</string>
-    <string name="user_setting_new_comment">Notificări despre comentarii</string>
-    <string name="user_setting_new_comment_tip">Primiți notificări despre comentariile noi.</string>
+    <string name="user_recommend_follow">Profiluri recomandate</string>
+    <string name="user_setting_follow_new_msg">Notificări de la persoanele pe care le urmăriți</string>
+    <string name="user_setting_follow_new_msg_tip">Primiți notificări pentru videoclipurile noi</string>
+    <string name="user_setting_followed_msg">Notificări despre urmăritori</string>
+    <string name="user_setting_followed_msg_tip">Primiți notificări atunci când persoanele încep să vă urmărească postările</string>
+    <string name="user_setting_new_comment">Notificări despre comentariile noi</string>
+    <string name="user_setting_new_comment_tip">"Veți primi notificări despre postările la comentariile și videoclipurile dvs."</string>
     <string name="user_setting_new_liked">Notificări pentru aprecieri</string>
-    <string name="user_setting_new_liked_tip">Primiți notificări atunci când alte persoane vă apreciază videoclipurile</string>
-    <string name="user_setting_topic_new_msg">Notificări despre videoclipuri noi</string>
-    <string name="user_setting_topic_new_msg_tip">"Primiți notificări atunci când videoclipurile din subiectele pe care le urmăriți sunt publicate."</string>
+    <string name="user_setting_new_liked_tip">"Veți primi notificări atunci când alte persoane vă apreciază videoclipurile și comentariile"</string>
+    <string name="user_setting_topic_new_msg">Notificări despre subiecte</string>
+    <string name="user_setting_topic_new_msg_tip">"Veți primi notificări despre videoclipurile noi din subiectele pe care le urmăriți"</string>
     <string name="user_topic_btn_text">Vedeți mai multe subiecte</string>
     <string name="user_topic_text">Subiectele mele</string>
+    <string name="user_upload_text">Încărcări</string>
     <string name="user_upload_tip">Încărcați</string>
     <string name="user_video_text">Videoclipurile mele</string>
     <string name="utf8_summary">Codare prestabilită</string>
@@ -829,12 +857,12 @@ Descărcați-le oricând doriți
     <string name="video_data_consumption_dialog_message">Pentru încărcare se vor folosi %1$s date mobile</string>
     <string name="video_data_consumption_dialog_title">Avertisment utilizare date mobile</string>
     <string name="video_parse_btn">Start</string>
-    <string name="video_parse_error_repeated">"Nu încărca videoclipurile similare"</string>
-    <string name="video_parse_error_unknown">"Acest serviciu video nu este suportat; încercați cu un alt serviciu"</string>
-    <string name="video_parse_hint">Aplicații suportate: WeChat, Weibo, Youku.</string>
+    <string name="video_parse_error_repeated">"Nu încărcați același videoclip de mai multe ori"</string>
+    <string name="video_parse_error_unknown">"Acest link nu este suportat; încercați cu un altul"</string>
+    <string name="video_parse_hint">Servicii suportate: WeChat, Weibo, Youku.</string>
     <string name="video_parse_success">Analizat cu succes</string>
-    <string name="video_parse_timeout">Ceva nu a mers bine; încercați din nou</string>
-    <string name="video_parsing_btn">Se analizează…</string>
+    <string name="video_parse_timeout">A apărut o eroare; încercați din nou</string>
+    <string name="video_parsing_btn">Se analizează</string>
     <string name="video_play_failed">Eroare necunoscută</string>
     <string name="video_publish_hint">O descriere corespunzătoare va ajuta alte persoane să vă găsească videoclipul</string>
     <string name="video_releasing">Încărcare…</string>
@@ -869,6 +897,9 @@ Descărcați-le oricând doriți
     <string name="weixin_not_installed">"WeChat nu este instalată"</string>
     <string name="weixin_sticker_tag_str">Stickere</string>
     <string name="wifi_state">Reţea Wi-Fi</string>
+    <string name="wx_title1">"Uite un videoclip mișto!"</string>
+    <string name="wx_title2">Am distribuit un videoclip, aruncă o privire!</string>
+    <string name="wx_title3">Vedeși videoclipuri virale din toată lumea!</string>
     <string name="wxcircle_platform">Momente</string>
     <string name="xiaomi_account">Cont Mi</string>
     <string name="xiaomi_btn_str">Mi</string>
