--- a/Romanian/main/Notes.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Notes.apk/res/values-ro/strings.xml
@@ -10,6 +10,7 @@
     <string name="alert_message_edit_anyway">Dacă editați această notă, o parte din conținutul său poate fi pierdut.</string>
     <string name="alert_title_delete">Ştergeți notă?</string>
     <string name="alert_title_edit_anyway">Această notă include conținut neacceptat</string>
+    <string name="all_folder_name">Toate notițele</string>
     <string name="all_terms">%1$s şi %2$s</string>
     <string name="app_name">Note</string>
     <string name="app_widget">Note</string>
@@ -17,26 +18,26 @@
     <string name="attachment_contact">Contacte</string>
     <string name="attachment_gallery">Selectați din Galerie</string>
     <string name="button_new_note">Notă nouă</string>
-    <string name="call_record_folder_name">Note apel</string>
+    <string name="call_folder_name">Note apel</string>
     <string name="default_folder_name">Dosar fără nume</string>
     <string name="delete_folder_dialog_tile">Ștergeți dosarul</string>
     <string name="dlg_check_reminder">"Nu arăta din nou"</string>
     <string name="dlg_delete_message">Ștergere…</string>
     <string name="dlg_desc_confirm_alarm_silent">Alarmele active nu vor suna atunci când modul Silenţios este activat</string>
+    <string name="dlg_hide_message">Ascundere…</string>
     <string name="dlg_info_creating_message">Creare mesaj…</string>
     <string name="dlg_move_message">Mutare…</string>
-    <string name="dlg_privacy_message">Se ascunde…</string>
     <string name="dlg_quick_delete_title">Ștergere rapidă</string>
     <string name="dlg_restore_message">Restaurare…</string>
     <string name="dlg_stick_message">Fixare…</string>
     <string name="dlg_title_confirm_alarm_silent">Alarmă silenţioasă</string>
-    <string name="dlg_unmark_privacy_message">Se afișează…</string>
+    <string name="dlg_unhide_message">Se afișează…</string>
     <string name="empty_folder_hint">"Niciun dosar
 Atingeți simbolul + pentru a crea un dosar"</string>
-    <string name="empty_note_mark_privacy_error">"Nu se poate ascunde o notă fără conținut"</string>
     <string name="enable_sync">Sincronizaţi</string>
     <string name="enable_sync_desc">Sincronizaţi notele cu contul dvs. Mi (%1$s)?</string>
     <string name="error_contact_not_exist">Contact inexistent</string>
+    <string name="error_hide_empty_note">"Nu se poate ascunde o notiță fără conținut"</string>
     <string name="error_note_empty_for_clock">Nu se poate seta timpul de memento pentru o notă goală</string>
     <string name="error_note_empty_for_send_to_desktop">Notele goale nu pot fi plasate pe desktop</string>
     <string name="error_note_not_exist">Nota nu există</string>
@@ -46,16 +47,19 @@ Atingeți simbolul + pentru a crea un dosar"</string>
     <string name="force_touch_menu_add">Adăugați o notiță</string>
     <string name="format_move_notes_out_folder">%1$s mutat</string>
     <string name="format_move_notes_to_folder">Au fost mutate %1$s în %2$s</string>
+    <string name="hidden_notes_fragment_title">Notițe ascunse</string>
     <string name="hint_foler_name">Nume</string>
     <string name="info_note_enter_desktop">Adăugată pe desktop</string>
     <string name="loading_text">Doar o secundă…</string>
     <string name="login_sync">Conectare şi sincronizare</string>
     <string name="menu_create_folder">Dosar nou</string>
     <string name="menu_delete">Ştergeţi</string>
+    <string name="menu_delete_forever">Ștergeți definitiv</string>
     <string name="menu_folders">Dosare</string>
-    <string name="menu_mark_privacy">Ascundeți</string>
+    <string name="menu_hide">Ascundeți</string>
     <string name="menu_move_parent_folder">Dosarul sursă</string>
     <string name="menu_move_to">Mutați în</string>
+    <string name="menu_restore">Restaurați</string>
     <string name="menu_send_as_image">Trimiteți ca imagine</string>
     <string name="menu_send_as_text">Trimiteți ca text</string>
     <string name="menu_send_to_desktop">Plasaţi pe desktop</string>
@@ -64,7 +68,7 @@ Atingeți simbolul + pentru a crea un dosar"</string>
     <string name="menu_source">Din %1$s</string>
     <string name="menu_stick">Fixaţi</string>
     <string name="menu_title_select_folder">Selectaţi dosarul</string>
-    <string name="menu_unmark_privacy">Afișați</string>
+    <string name="menu_unhide">Afișați</string>
     <string name="menu_unstick">Anulaţi fixarea</string>
     <string name="micloud_state_total_count">%1$s</string>
     <string name="not_now">Nu acum</string>
@@ -89,11 +93,10 @@ Atingeți simbolul + pentru a crea un dosar"</string>
     <string name="pref_title_note_style">Stil notă</string>
     <string name="pref_title_recover_help">Recuperați notele</string>
     <string name="pref_title_skip_confirm_for_quick_delete">Ștergere rapidă</string>
-    <string name="privacy_hint">Confidențialitate</string>
-    <string name="privacy_notes_fragment_title">Note ascunse</string>
     <string name="recover_notes_hint">A apărut o eroare; recuperați notițele accesând i.mi.com</string>
     <string name="redo">Repetaţi</string>
     <string name="rename_folder_dialog_tile">Redenumiți dosarul</string>
+    <string name="root_folder_name">Notițe rapide</string>
     <string name="search">Note</string>
     <string name="search_hint">Căutaţi note</string>
     <string name="search_keyword_notes">Note;Memento</string>
@@ -137,15 +140,16 @@ Atingeți simbolul + pentru a crea un dosar"</string>
     <string name="theme_title_red">Roșu</string>
     <string name="theme_title_star">Steluțe</string>
     <string name="theme_title_yellow">Galben</string>
-    <string name="toast_mark_privacy_notes">Ascunse cu succes</string>
-    <string name="toast_mark_privacy_notes_count">%1$s note au fost ascunse cu succes</string>
     <string name="toast_message_add_image_fail">Adăugarea imaginii a eşuat</string>
     <string name="toast_message_add_text_warn">Acest tip de fișier nu este acceptat</string>
     <string name="toast_notes_delete_success">Eliminată cu succces</string>
+    <string name="toast_notes_hidden">Ascunsă cu succes</string>
+    <string name="toast_notes_hidden_count">%1$s ascunse su succes</string>
+    <string name="toast_notes_unhidden">Eliminată din ascunse cu succes</string>
+    <string name="toast_notes_unhidden_count">%1$s nu mai sunt ascunse</string>
     <string name="toast_reach_text_limit_attachment">Nu puteţi adăuga atașamente noi pentru că nota este prea lungă</string>
     <string name="toast_reach_text_limit_truncate">Această nota este prea lungă. A fost tăiat o parte din textul de la sfârșit.</string>
-    <string name="toast_unmark_privacy_notes">Anularea ascunderii a reușit</string>
-    <string name="toast_unmark_privacy_notes_count">%1$s nu mai sunt ascunse</string>
+    <string name="trash_folder_name">Gunoi</string>
     <string name="undo">Anulaţi</string>
     <string name="unknown_source">Sursă necunoscută</string>
     <string name="welcome_note_for_cm">"Și multe alte caracteristici!
@@ -154,5 +158,4 @@ Atingeți simbolul + pentru a crea un dosar"</string>
   - Setare memento-uri"</string>
     <string name="widget_content_loading">Doar o secundă…</string>
     <string name="widget_havenot_content">Atingeţi pentru a crea o notă. Redimensionaţi prin apăsare și tragere spre una din margini.</string>
-    <string name="widget_under_privacy_mode">Nu se pot vizualiza notele în modul Vizitator</string>
 </resources>
